--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,12 +3,15 @@
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="./vendor/phpunit/phpunit/phpunit.xsd"
          backupGlobals="false" colors="true" bootstrap="tests/bootstrap.php">
-  <coverage cacheDirectory=".phpunit.cache/code-coverage"
+    <coverage cacheDirectory=".phpunit.cache/code-coverage"
             processUncoveredFiles="true"
             ignoreDeprecatedCodeUnits="true">
         <include>
             <directory suffix=".php">src</directory>
         </include>
+        <report>
+            <html outputDirectory="var/coverage" />
+        </report>
     </coverage>
     <php>
         <ini name="error_reporting" value="-1"/>
