--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "doctrine/annotations": "^1.0",
         "doctrine/mongodb-odm-bundle": "^4.2",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "samj/fractal-bundle": "^4.0",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
