--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,20 +1,12 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     env(MONGODB_URL): ''
     env(MONGODB_DB): ''
 
 services:
-    # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
         exclude:
@@ -23,18 +15,11 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    App\Infrastructure\Controller\:
-        resource: '../src/Infrastructure/Symfony/Controller/'
+    App\Infrastructure\Symfony\Controller\:
+        resource: '../src/Infrastructure/Symfony/Controller'
         tags: ['controller.service_arguments']
 
-    App\Infrastructure\QueryHandler\:
-        resource: '../src/Infrastructure/Symfony/QueryHandler/*'
-        public: true
-        tags: [messenger.message_handler]
-
-    App\Infrastructure\CommandHandler\:
-        resource: '../src/Infrastructure/Symfony/CommandHandler/*'
-        public: true
-        tags: [messenger.message_handler]
+    App\Infrastructure\Persistence\MongoDB\ProductRepository:
+        factory: ['@doctrine_mongodb', getRepository]
+        arguments:
+            - App\Infrastructure\Persistence\MongoDB\Document\Product
