--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,10 +17,15 @@
         <ini name="error_reporting" value="-1"/>
         <server name="APP_ENV" value="test" force="true"/>
         <server name="SHELL_VERBOSITY" value="-1"/>
+        <server name="KERNEL_CLASS" value="App\Infrastructure\Symfony\Kernel" />
     </php>
     <testsuites>
         <testsuite name="Inventory Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
+
+    <listeners>
+        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
+    </listeners>
 </phpunit>
