--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,5 @@
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
+MONGODB_URL=mongodb://mongo:27017
+MONGODB_DB=seven_test
